# enigma2

./: .gitignore  .travis.yml  BoxBrandingTest.py  ChangeLog  GlobalActions.py  Makefile.am  Navigation.py  PowerTimer.py  README.md  RecordTimer.py  Rules-cpp.mak  ServiceReference.py  bouquets.radio  bouquets.tv  configure.ac  e2reactor.py  enigma2.bb  keyids.py  keymapparser.py  lamedb  mytest.py  skin.py  timer.py  timers.xml  upgrade.py  userbouquet.bef001.radio  userbouquet.bef001.tv  userbouquet.bef002.radio  userbouquet.bef002.tv  userbouquet.bef003.radio  userbouquet.bef003.tv  userbouquet.bef004.radio  userbouquet.bef004.tv  userbouquet.bef005.radio  userbouquet.bef005.tv  userbouquet.bef006.radio  userbouquet.bef006.tv  userbouquet.bef007.radio  userbouquet.bef007.tv  userbouquet.dbe00.tv  (+9 more)
data/: CommonSkin.xml  Makefile.am  Skin_ExtPlugins.xml  convert-iso-639-3.py  encoding.conf  groupedservices  keymap.lng  keymap.ntr  keymap.u80  keymap.usr  keymap.xml  keymap.xml.backup  keymap.xpe  keymap_usermod.xml  keytranslation.xml  menu.xml  restore.mvi  setup.xml  skin_default.xml  skin_display.xml  skin_display220_no_picon.xml  skin_display220_no_picon_2.xml  skin_display220_picon.xml  skin_display96.xml  skin_subtitles.xml  startwizard.xml  subservices.xml  unicable.xml  videowizard.xml
data/7segment/: skin_display.xml  skin_display_HiSilcion_4digit.xml  skin_display_name.xml
data/Nobile/: Makefile.am
data/defaults/: Makefile.am  bouquets.radio  bouquets.tv  epgrefresh.xml  lamedb  lamedb5  menusort.xml  radiode_playlist  settings  subservices.xml  userbouquet.bef001.tv  userbouquet.bef002.tv  userbouquet.bef003.tv  userbouquet.bef004.tv  userbouquet.bef005.tv  userbouquet.bef006.tv  userbouquet.bef007.tv  userbouquet.bef008.tv  userbouquet.bef009.tv  userbouquet.bef010.tv  userbouquet.favourites.radio  userbouquet.favourites.tv  userbouquet.iptv.tv  userbouquet.iptv_austria_swiss.tv  userbouquet.iptv_deutschland.tv  userbouquet.iptv_epg_germany.tv  userbouquet.iptv_germany.tv  userbouquet.iptv_music.tv  userbouquet.iptv_osteuropa.tv  userbouquet.iptv_radio.radio  userbouquet.iptv_russia.tv  userbouquet.iptv_sports.tv  userbouquet.iptv_turkish.tv  userbouquet.iptv_various.tv  userbouquet.iptv_webcams.tv  userbouquet.iptv_westeuropa.tv  userbouquet.iptv_world.tv  whitelist_streamrelay
data/display/: Makefile.am  skin_display.xml
data/display128/: Makefile.am  skin_display.xml  skin_display_1.xml  skin_display_2.xml  skin_display_3.xml  skin_display_4.xml  skin_display_5.xml  skin_display_6.xml  skin_display_7.xml  skin_display_8_weather.xml
data/display128dm/: skin_display.xml  skin_display_picon.xml
data/display140/: skin_display.xml
data/display220/: Makefile.am  skin_common.xml  skin_display.xml  skin_display_01.xml  skin_display_04_picon.xml  skin_display_09.xml  skin_display_ana1_1.xml  skin_display_ana1_2.xml  skin_display_ana1_3.xml  skin_display_ana1_4.xml  skin_display_ana2_1.xml  skin_display_ana2_2.xml  skin_display_ana2_3.xml  skin_display_ana3_1.xml  skin_display_ana3_3.xml  skin_display_ana3_4.xml  skin_display_ana_1.xml  skin_display_ana_2.xml  skin_display_ana_3.xml  skin_display_analoguhr.xml  skin_display_analoguhr_blue.xml  skin_display_analoguhr_orange.xml  skin_display_clock.xml  skin_display_dig1_1.xml  skin_display_dig1_3.xml  skin_display_dig1_4.xml  skin_display_dig_1.xml  skin_display_dig_2.xml  skin_display_dig_3.xml  skin_display_digitaluhr_blue.xml  skin_display_digitaluhr_orange.xml  skin_display_klappuhr_blue.xml  skin_display_klappuhr_orange.xml  skin_display_no_picon.xml  skin_display_no_picon_1.xml  skin_display_no_picon_2.xml  skin_display_picon.xml  skin_display_picon_1.xml  skin_display_picon_2.xml  skin_display_picon_3.xml  (+44 more)
data/display255/: Makefile.am  skin_display.xml  skin_display_01+remaining.xml  skin_display_01.xml  skin_display_02.xml  skin_display_03.xml  skin_display_04_msn1.xml  skin_display_04_msn2.xml  skin_display_04_picon.xml  skin_display_05.xml  skin_display_06.xml  skin_display_07.xml  skin_display_08.xml  skin_display_09.xml  skin_display_10.xml  skin_display_googgi.xml  skin_display_no_picon.xml  skin_display_picon.xml
data/display390/: skin_display.xml  skin_display_02.xml  skin_display_03.xml  skin_display_04.xml  skin_display_05.xml  skin_display_picon_01.xml  skin_display_picon_02.xml  skin_display_picon_03.xml  skin_display_picon_04.xml  skin_display_picon_05.xml  skin_display_picon_06.xml  skin_display_picon_07.xml  skin_display_picon_08.xml  skin_display_picon_09.xml  skin_display_picon_10.xml  skin_display_picon_11.xml  skin_display_weather_01.xml  skin_display_weather_02.xml
data/display400/: Makefile.am  skin_display.xml  skin_display_02.xml  skin_display_03.xml  skin_display_04.xml  skin_display_05.xml  skin_display_analoguhr_blue.xml  skin_display_analoguhr_orange.xml  skin_display_clock.xml  skin_display_clock_orange2.xml  skin_display_clock_orange3.xml  skin_display_digitaluhr_blue.xml  skin_display_digitaluhr_orange.xml  skin_display_klappuhr_blue.xml  skin_display_klappuhr_orange.xml  skin_display_picon_01.xml  skin_display_picon_02.xml  skin_display_picon_03.xml  skin_display_picon_04.xml  skin_display_picon_05.xml  skin_display_picon_06.xml  skin_display_picon_07.xml  skin_display_picon_08.xml  skin_display_picon_09.xml  skin_display_picon_10.xml  skin_display_picon_11.xml  skin_display_picon_12.xml  skin_display_picon_13.xml  skin_display_picon_5.xml  skin_display_weather_01.xml  skin_display_weather_02.xml  skin_lcd_no_picon_1.xml  skin_lcd_no_picon_2.xml  skin_lcd_picon.xml  skin_lcd_picon_1.xml  skin_lcd_picon_2.xml  skin_lcd_picon_3.xml  skin_lcd_picon_4.xml  skin_lcd_picon_5.xml  skin_lcd_picon_weather.xml  (+4 more)
data/display400gb4k/: skin_common.xml  skin_display_02.xml  skin_display_03.xml  skin_display_04.xml  skin_display_05.xml  skin_display_picon_01.xml  skin_display_picon_02.xml  skin_display_picon_03.xml  skin_display_picon_04.xml  skin_display_picon_05.xml  skin_display_picon_06.xml  skin_display_picon_07.xml  skin_display_picon_08.xml  skin_display_picon_09.xml  (+6 more)
(+1429 files in other folders)
