SUBDIRS = fonts extensions keymaps defaults display

dist_pkgdata_DATA = \
	encoding.conf \
	keymap.xml \
	keytranslation.xml \
	keymap.ntr \
	keymap.u80 \
	keymap.lng \
	menu.xml \
	black.mvi \
	rcpositions.xml \
	restore.mvi \
	setup.xml \
	skin_subtitles.xml \
	startwizard.xml \
	videowizard.xml \
	userinterfacepositionerwizard.xml \
	freesat.t1 \
	freesat.t2 \
	unicable.xml \
	groupedservices \
	otv_011a0000_0002_07d4.dict \
	otv_00820000_fbff_16a8.dict \
	otv_06180000_1000_0011.dict \
	otv_06400000_00a9_0003.dict \
	hd-testcard.mvi \
	distro-logo.png \
	distro-lcd-logo.png

