installdir = $(pkgdatadir)/defaults

dist_install_DATA = \
	interfaces \
	whitelist \
	bouquets.tv \
	bouquets.radio \
	blacklist \
	settings \
	epgrefresh.xml \
	menusort.xml \
	radiode_playlist \
	subservices.xml \
	userbouquet.favourites.tv \
	userbouquet.favourites.radio \
	lamedb \
	userbouquet.bef001.tv \
	userbouquet.bef002.tv \
	userbouquet.bef003.tv \
	userbouquet.bef004.tv \
	userbouquet.bef005.tv \
	userbouquet.bef007.tv
