installdir = $(pkgdatadir)/defaults

dist_install_DATA = \
	interfaces \
	whitelist \
	bouquets.tv \
	bouquets.radio \
	blacklist \
	settings \
	epgrefresh.xml \
	menusort.xml \
	radiode_playlist \
	subservices.xml \
	userbouquet.favourites.tv \
	userbouquet.favourites.radio \
	lamedb \
	lamedb5 \
	userbouquet.bef001.tv \
	userbouquet.bef002.tv \
	userbouquet.bef003.tv \
	userbouquet.bef004.tv \
	userbouquet.bef005.tv \
	userbouquet.bef007.tv \
	userbouquet.bef008.tv \
	userbouquet.bef009.tv \
	userbouquet.iptv.tv \
	userbouquet.iptv_epg_germany.tv \
	userbouquet.iptv_germany.tv \
	userbouquet.iptv_music.tv \
	userbouquet.iptv_various.tv \
	userbouquet.iptv_webcams.tv
