installdir = $(pkgdatadir)/defaults

dist_install_DATA = \
	interfaces \
	blacklist \
	bouquets.radio \
	bouquets.tv \
	settings \
	epgrefresh.xml \
	menusort.xml \
	radiode_playlist \
	subservices.xml \
	userbouquet.favourites.tv \
	userbouquet.favourites.radio \
	lamedb \
	lamedb5 \
	userbouquet.bef001.tv \
	userbouquet.bef002.tv \
	userbouquet.bef003.tv \
	userbouquet.bef004.tv \
	userbouquet.bef005.tv \
	userbouquet.bef007.tv \
	userbouquet.bef008.tv \
	userbouquet.bef009.tv \
	userbouquet.iptv_austria_swiss.tv \
	userbouquet.iptv_deutschland.tv \
	userbouquet.iptv_music.tv \
	userbouquet.iptv_osteuropa.tv \
	userbouquet.iptv_russia.tv \
	userbouquet.iptv_sports.tv \
	userbouquet.iptv_webcams.tv \
	userbouquet.iptv_world.tv \
	whitelist
