installdir = $(pkglibdir)/python/Components/Converter

install_PYTHON = \
	__init__.py ClockToText.py Converter.py EventName.py StaticText.py EventTime.py \
	Poll.py RemainingToText.py StringList.py ServiceName.py FrontendInfo.py ServiceInfo.py \
	ConditionalShowHide.py ServicePosition.py ValueRange.py RdsInfo.py Streaming.py \
	StaticMultiList.py ServiceTime.py MovieInfo.py MenuEntryCompare.py StringListSelection.py \
	ServiceOrbitalPosition.py CryptoInfo.py TextCase.py \
	ValueBitTest.py TunerInfo.py ConfigEntryTest.py TemplatedMultiContent.py ProgressToText.py \
	Combine.py SensorToText.py ValueToPixmap.py PliExtraInfo.py genre.py \
	ChannelCryptoInfo.py ChannelExpertInfo.py ChannelSelectionInfo.py ClockToTextNobile.py \
	DMCHDCaidDisplay.py DMCHDCamdInfo.py DMCHDServiceInfo.py DMCHDSmartInfo.py EcmCryptoInfo.py ElgatoGP3RefString.py \
	ExtendedServiceInfoNobile.py ExtraNumTextNobile.py g16ServiceNameEventNobile.py HDstreamNobile.py nanoEventDesc.py \
	pCaidDisplay.py PliExtraInfoNobile.py valioClockToText.py valioCOCA.py valioEventDesc.py valioRefString.py \
	valioTunerInfoBR.py valioTunerInfo.py VFDClockToText.py VFDExtendedServiceInfo.py
